# gwidi_inputserver

./: CMakeLists.txt  README.md  run_server.cc
gwidi_server/: CMakeLists.txt  GwidiServer.cc  gwidi_server-config.cmake
gwidi_server/include/: GwidiServer.h
gwidi_socketserver/: CMakeLists.txt  GwidiSocketServer.cc  gwidi_socketserver-config.cmake
gwidi_socketserver/include/: GwidiSocketServer.h
gwidi_socketserver/test/: CMakeLists.txt  main.cc
linux_inputreader/: CMakeLists.txt  LinuxInputReader.cc  linux_inputreader-config.cmake
linux_inputreader/include/: LinuxInputReader.h
linux_inputreader/test/: CMakeLists.txt  main.cc
linux_sendinput/: CMakeLists.txt  linux_sendinput-config.cmake
linux_sendinput/test/: CMakeLists.txt
scripts/: test_udp.sh
